Fix pre/code horizontal scrolling problem in small viewports caused by introduction of flexbox.

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -91,6 +91,16 @@ code {
   flex: 1 0 auto;
 }
 
+// Needed for flexbox fix
+.container {
+  max-width: 100%;
+}
+
+// Needed for flexbox fix
+pre {
+  position: relative;
+}
+
 .colored-background {
   background-color: $header-color;
 }
